k8s-yaml/deploy_example.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-deployment-django
  labels:
    app: django-deploy
    owner: forluc
spec:
  selector:
    matchLabels:
      project: django-k8s
  template:
    metadata:
      labels:
        project: django-k8s
    spec:
      containers:
        - name: django-k8s
          image: forluc/django_app
          ports:
            - containerPort: 80
