k8s-yaml/pod_example.yaml
apiVersion : v1
kind: Pod
metadata:
  name: my-pod-django
  labels:
    app: django-pod
    owner: forluc
spec:
  containers:
    - name : django
      image: forluc/django_app
      ports:
        - containerPort: 80
